// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListClickableColumn /> should render a list row wrapped and clickable 1`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
  useReactRouter={true}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={true}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={true}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="#"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with click events 1`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  handleClick={[Function]}
  isHeader={false}
  rowIndex={0}
  useReactRouter={true}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={true}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={true}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="#"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with click events 2`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  handleLeftClick={[Function]}
  isHeader={false}
  rowIndex={0}
  useReactRouter={true}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={true}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={true}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="#"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with url to redirect 1`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
  urlForRow={[Function]}
  useReactRouter={true}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="test-url.test"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={true}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="test-url.test"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={true}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="test-url.test"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a simple list row if is header 1`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={true}
  rowIndex={0}
  useReactRouter={true}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={true}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={true}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="#"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a simple list row with a simple redirect 1`] = `
.c0 {
  color: inherit;
}

.c0:hover,
.c0:visited,
.c0:active,
.c0:focus {
  color: inherit;
}

<ListClickableColumn
  blockNavigationOnLeftClick={false}
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
  urlForRow={[Function]}
  useReactRouter={false}
>
  <Anchor
    blockNavigationOnLeftClick={false}
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="test-url.test"
    onClick={[Function]}
    onLeftClick={[Function]}
    useReactRouter={false}
  >
    <styled.a
      blockNavigationOnLeftClick={false}
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="test-url.test"
      onClick={[Function]}
      onLeftClick={[Function]}
      useReactRouter={false}
    >
      <a
        className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x c0"
        href="test-url.test"
        onClick={[Function]}
      >
        <div>
          This is my column content
        </div>
      </a>
    </styled.a>
  </Anchor>
</ListClickableColumn>
`;
